===Changelog for NEI LOTR===
Made by 'Crafted_Mods' or 'The_Ranger_Malvegil'

 #0.7.0-ALPHA:

 #0.6.0-ALPHA:
  + Updated to NEIRecipeHandlers-2.0.1-ALPHA

 #0.5.3-ALPHA:
  + The sourcecode of the plugin now available at: https://github.com/CraftedMods/nei-lotr
  + Added a cauldron recipe handler which supports undyening and unpoisoning recipes
  + Added localization support for recipe handlers
  
  * Restructured some internal things

 #0.5.2-ALPHA:
  * Fixed some compatibility issues with CraftTweaker

 #0.5.1-ALPHA:
  + Added NEI overlay handler support for:
   1. Vanilla Crafting Table
   2. Middle-earth Crafting Tables
   3. Barrel
  + Added config options to disable all recipe handlers in a category
    
  * Fixed an exception thrown by the unsmeltery recipe handler on joining servers
  * Fixed that the version checker didn't show notifications about new versions if the player joined a server
  * The unsmeltery recipe handler now caches some recipes
  * Disabling the NEI integration now disables the execution of most tasks executed on startup
  * Some recipe handlers now show more accurate results regarding item damage and NBT tags
  * Updated mcmod.info

 #0.5.0-ALPHA:
  + Updated to Beta 33.4 of the LOTR Mod
  + Added a config option to disable the vanilla brewing recipe handler
  + Added config options for every single recipe handler
  + Added support for
   1. Ent Jar brewing recipes
   2. Millstone recipes
  + Added recipe caching - a feature that improves the performance of the addon
  
  * Rewrote and modularized the whole addon
  * Readded and improved all recipe handlers contained in the previous versions
  * Improved the performance of most recipe handlers
  * Restructured the config file

 #0.4.6-ALPHA:
 + Updated to Beta 32 of LOTR Mod
  + Added support for the Rivendell CT
 
 #0.4.5-ALPHA:
 * Fixed that the dwarven door was hidden in NEI
 
 #0.4.4-ALPHA:
 * Fixed a bug where transfer rects were added to recipe handlers
 
 #0.4.3-ALPHA: