@@ -2,6 +2,10 @@
 Made by 'Crafted_Mods' or 'The_Ranger_Malvegil'
 
  #0.7.0-ALPHA:
+  + Updated to Beta 34 of the LOTR Mod
+   + Added support for the Gulf of Harad and Umbar Crafting Tables
+   + Added the new technical blocks to the item hiding list
+   + Added support for all new traders
 
  #0.6.0-ALPHA:
   + Updated to NEIRecipeHandlers-2.0.1-ALPHA
